<resources>
    <string name="app_name">FRC Scouting App Frontend</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!--empty string-->
    <string name="empty"></string>

    <!--App Version-->
    <string name="app_version">Pre Release 1.2.4</string>
    <!--Fragment Titles-->
    <string name="pre_auton_title">Pre-Auton</string>
    <string name="auton_title">Auton</string>
    <string name="teleop_title">Teleop</string>
    <string name="post_match_title">Post-Match</string>
    <!--Titles for undo and redo buttons-->
    <string name="undo_title">Undo</string>
    <string name="redo_title">Redo</string>
    <!--Title for team and name prompts-->
    <string name="prompt_name_title">Name of scouter</string>
    <string name="name_prompt_hint">Name</string>
    <string name="prompt_team_title">Team Number</string>
    <string name="team_prompt_hint">Team Number</string>
    <!--Match number spinner-->
    <string name="match_number_title">Match Number</string>
    <!--Team Color Prompt-->
    <string name="team_color_title">Team Color</string>
    <string name="team_color_red">RED</string>
    <string name="team_color_blue">BLUE</string>
    <!--Starting Position Titles-->
    <string name="start_amp">Amp</string>
    <string name="start_amp_speaker">Amp- Speaker</string>
    <string name="start_source_speaker">Source- Speaker</string>
    <string name="start_source">Source</string>
    <!--Amp/Speaker counter titles-->
    <string name="amp_title_default">Amp</string>
    <string name="speaker_title_default">Speaker</string>
    <!--Scored and Missed titles-->
    <string name="score_title_default">Scored:</string>
    <string name="miss_title_default">Missed:</string>
    <!--Names for plus and minus buttons-->
    <string name="plus_button">plus</string>
    <string name="minus_button">minus</string>
    <!--Default value for counters (0)-->
    <string name="plus_minus_default">0</string>
    <!--CheckBox titles-->
    <string name="leave_bonus_title">Did they leave? (Taxi):</string>
    <string name="crossed_center_line_title">Did they cross center:</string>
    <string name="hang_title">Started Hang</string>
    <string name="successful_hang_title">Successful Hang?</string>
    <string name="trap_title">Trap Scored?</string>
    <string name="robot_break_check">Break?</string>
    <string name="is_team_noshow">Team didn\'t show up:</string>
    <string name="park_title">Did they Park?</string>
    <!--Next and Submit Button Text-->
    <string name="submit_button_text">Submit</string>
    <string name="next_button_title_default">Next</string>
    <string name="reset_form_title">Reset</string>
    <string name="endgame_title">Endgame / Misc.</string>
    <!--Title for pickup and amplify-->
    <string name="pickup_note_title">Pickup:</string>
    <string name="pickup_source_title">Source: 0</string>
    <string name="pickup_ground_title">Ground: 0</string>
    <string name="amplify_button_title">Amplify</string>
    <!--Back arrow for back button-->
    <string name="default_back_button_title">&#60;—</string>
    <!--Buttons and text for submit confirmation-->
    <string name="confirm_submit">Are you sure you want to submit?</string>
    <string name="reset_title">Are you sure you want to reset?</string>
    <string name="cancel_button">Cancel</string>
    <string name="confirm_reset_button">Reset</string>
    <!--Start auton and teleop popups-->
    <string name="auton_start_prompt">Press when Auton starts</string>
    <string name="teleop_start_prompt">Press when Teleop starts</string>
    <string name="back_button">Back</string>
    <string name="start_button">Start</string>
    <!--Defense Button-->
    <string name="defensive_action_text">Defensive Action (Hold)</string>
    <!--For json submission selection -->
    <string name="archive_title">Select a submission to view:</string>
    <string name="close_button">Close</string>
    <!--Bluetooth-->
    <string name="bluetooth_connect_button">Connect</string>
    <string name="bluetooth_mac_button">Change MAC</string>
    <string name="bluetooth_mac_title">MAC:</string>
    <string name="bluetooth_port_title">Port:</string>
    <string name="bluetooth_settings_title">Press save when completed</string>
    <string name="save_button">Save</string>
    <string name="bluetooth_connected_status">Connected</string>
    <string name="bluetooth_disconnected_status">Disconnected</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
