<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cham_background_default"
    android:foregroundTint="@color/black"
    android:clickable="true"
    tools:context=".AutonFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/undoButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/invisible"
            android:contentDescription="@string/minus_button"
            android:src="@drawable/arrow_undo_outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/chaminade_orange"/>

        <TextView
            android:id="@+id/undo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undo_title"
            android:textColor="@color/chaminade_orange"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/undoButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/undoButton" />

        <ImageButton
            android:id="@+id/redoButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/invisible"
            android:contentDescription="@string/plus_button"
            android:cropToPadding="false"
            android:src="@drawable/arrow_redo_outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/chaminade_orange" />

        <TextView
            android:id="@+id/redo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redo_title"
            android:textColor="@color/chaminade_orange"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/redoButton"
            app:layout_constraintTop_toBottomOf="@+id/redoButton" />

        <Button
            android:id="@+id/ampScored"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/chaminade_orange"
            android:text="@string/plus_minus_default"
            android:textColor="@color/cham_background_default"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/scoredTitle"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/scoredTitle"
            app:layout_constraintTop_toTopOf="@+id/scoredTitle" />

        <Button
            android:id="@+id/ampMissed"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/chaminade_orange"
            android:text="@string/plus_minus_default"
            android:textColor="@color/cham_background_default"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/missedTitle"
            app:layout_constraintStart_toStartOf="@+id/ampScored"
            app:layout_constraintTop_toTopOf="@+id/missedTitle"
            app:layout_constraintVertical_bias="0.411" />

        <Button
            android:id="@+id/speakerScored"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/chaminade_orange"
            android:text="@string/plus_minus_default"
            android:textColor="@color/cham_background_default"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/ampScored"
            app:layout_constraintEnd_toEndOf="@+id/speakerTitleTextBox"
            app:layout_constraintStart_toStartOf="@+id/speakerTitleTextBox"
            app:layout_constraintTop_toTopOf="@+id/ampScored" />

        <Button
            android:id="@+id/speakerMissed"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/chaminade_orange"
            android:text="@string/plus_minus_default"
            android:textColor="@color/cham_background_default"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/ampMissed"
            app:layout_constraintEnd_toEndOf="@+id/speakerScored" />

        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auton_title"
            android:textColor="@color/off_white"
            android:textSize="96sp"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ampTitleTextBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/amp_title_default"
            android:textColor="@color/off_white"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="@+id/ampScored"
            app:layout_constraintStart_toStartOf="@+id/ampScored"
            app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

        <TextView
            android:id="@+id/speakerTitleTextBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speaker_title_default"
            android:textColor="@color/off_white"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="@+id/ampTitleTextBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view" />

        <TextView
            android:id="@+id/scoredTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/score_title_default"
            android:textColor="@color/off_white"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ampTitleTextBox" />

        <TextView
            android:id="@+id/missedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/miss_title_default"
            android:textColor="@color/off_white"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="@+id/scoredTitle"
            app:layout_constraintTop_toBottomOf="@+id/scoredTitle" />

        <View
            android:id="@+id/view"
            android:layout_width="2sp"
            android:layout_height="350sp"
            android:background="@color/off_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.59"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ampTitleTextBox" />

        <TextView
            android:id="@+id/leaveQuestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/leave_bonus_title"
            android:textColor="@color/off_white"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mainTitle"
            app:layout_constraintVertical_bias="0.5" />

        <CheckBox
            android:id="@+id/leaveQuestionCheckBox"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:background="?android:attr/listChoiceIndicatorMultiple"
            android:backgroundTint="@color/chaminade_orange"
            android:button="@null"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="@+id/leaveQuestionTitle"
            app:layout_constraintEnd_toEndOf="@+id/centerLineCheckbox"
            app:layout_constraintTop_toTopOf="@+id/leaveQuestionTitle"
            app:layout_constraintVertical_bias="0.50" />

        <TextView
            android:id="@+id/crossedCenterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/crossed_center_line_title"
            android:textColor="@color/off_white"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mainTitle"
            app:layout_constraintVertical_bias="0.65" />

        <CheckBox
            android:id="@+id/centerLineCheckbox"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:background="?android:attr/listChoiceIndicatorMultiple"
            android:backgroundTint="@color/chaminade_orange"
            android:button="@null"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="@+id/crossedCenterTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/crossedCenterTitle"
            app:layout_constraintTop_toTopOf="@+id/crossedCenterTitle" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="240sp"
            android:layout_height="120sp"
            android:backgroundTint="@color/chaminade_orange"
            android:text="@string/next_button_title_default"
            android:textColor="@color/cham_background_default"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/returnToPreAuton"
            android:layout_width="240sp"
            android:layout_height="120sp"
            android:backgroundTint="@color/chaminade_orange"
            android:text="@string/default_back_button_title"
            android:textColor="@color/cham_background_default"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>