<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cham_background_default"
    android:foregroundTint="@color/black"
    tools:context=".PreAuton">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre_auton_title"
            android:textColor="@color/off_white"
            android:textSize="96sp"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scouterNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/prompt_name_title"
            android:textColor="@color/off_white"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mainTitle"
            app:layout_constraintVertical_bias=".15" />

        <EditText
            android:id="@+id/scouterNameInput"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:hint="@string/name_prompt_hint"
            android:textColor="@color/off_white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/scouterNameTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/scouterNameTitle" />

        <TextView
            android:id="@+id/teamNameTitle"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/prompt_team_title"
            android:textColor="@color/off_white"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/backupQuestionTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teamColorTitle" />

        <Spinner
            android:id="@+id/teamNumberInput"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="11"
            android:inputType="number"
            android:maxLength="5"
            android:textColor="@color/off_white"
            android:textSize="64sp"
            app:layout_constraintBottom_toBottomOf="@+id/teamNameTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/teamNameTitle"
            app:layout_constraintTop_toTopOf="@+id/teamNameTitle" />

        <TextView
            android:id="@+id/backupQuestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/is_team_noshow"
            android:textColor="@color/off_white"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".5" />

        <CheckBox
            android:id="@+id/noShowCheckbox"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:background="?android:attr/listChoiceIndicatorMultiple"
            android:backgroundTint="@color/chaminade_orange"
            android:button="@null"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="@+id/backupQuestionTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backupQuestionTitle"
            app:layout_constraintTop_toTopOf="@+id/backupQuestionTitle" />

        <TextView
            android:id="@+id/matchNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/match_number_title"
            android:textColor="@color/off_white"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/teamColorTitle"
            app:layout_constraintStart_toStartOf="@+id/scouterNameTitle"
            app:layout_constraintTop_toBottomOf="@+id/scouterNameTitle" />

        <Spinner
            android:id="@+id/match_number_spinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="@+id/matchNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/matchNumber"
            app:layout_constraintTop_toTopOf="@+id/matchNumber" />

        <TextView
            android:id="@+id/teamColorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_color_title"
            android:textColor="@color/off_white"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/backupQuestionTitle"
            app:layout_constraintStart_toStartOf="@+id/backupQuestionTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".75" />

        <RadioGroup
            android:id="@+id/team_color_switch"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/toggle_background"
            android:checkedButton="@+id/team_red"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/teamColorTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/teamColorTitle"
            app:layout_constraintTop_toTopOf="@+id/teamColorTitle">

            <RadioButton
                android:id="@+id/team_blue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_background_blue"
                android:button="@null"
                android:gravity="center"
                android:text="@string/team_color_blue"
                android:textSize="20dp"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/team_red"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_background_red"
                android:button="@null"
                android:gravity="center"
                android:text="@string/team_color_red"
                android:textSize="20dp"
                android:textColor="@color/white" />
        </RadioGroup>

        <ImageView
            android:id="@+id/startingPosImage"
            android:layout_width="430dp"
            android:layout_height="330dp"
            android:src="@drawable/frc_2024_field_red"
            app:layout_constraintBottom_toTopOf="@+id/nextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noShowCheckbox" />

        <RadioGroup
            android:id="@+id/startingLocation"
            android:layout_width="375dp"
            android:layout_height="70dp"
            android:layout_marginBottom="40dp"
            android:background="@color/invisible"
            android:checkedButton="@+id/team_red"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/startingPosImage"
            app:layout_constraintEnd_toEndOf="@+id/startingPosImage"
            app:layout_constraintStart_toStartOf="@+id/startingPosImage">

            <RadioButton
                android:id="@+id/left_start"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/start_source"
                android:textColor="@color/red_text_toggle"
                android:textSize="16sp"
                android:background="@drawable/start_toggle_red"
                android:button="@null"
                android:gravity="center"/>

            <RadioButton
                android:id="@+id/middle_start"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/start_speaker"
                android:textColor="@color/red_text_toggle"
                android:textSize="16sp"
                android:background="@drawable/start_toggle_red"
                android:button="@null"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/right_start"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="85dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/start_amp"
                android:textColor="@color/red_text_toggle"
                android:textSize="16sp"
                android:background="@drawable/start_toggle_red"
                android:button="@null"
                android:gravity="center" />
        </RadioGroup>
        <Button
            android:id="@+id/nextButton"
            android:layout_width="240sp"
            android:layout_height="120sp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/chaminade_orange"
            android:text="@string/next_button_title_default"
            android:textColor="@color/cham_background_default"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>