<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/black"
        android:alpha="0.5"
        android:clickable="true">
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="510sp"
        android:layout_height="410sp"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/popup_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="500sp"
            android:layout_height="400sp"
            android:background="@drawable/popupbg"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </LinearLayout>

        <TextView
            android:id="@+id/confirmSubmitPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/teleop_start_prompt"
            android:textColor="@color/off_white"
            android:textSize="56sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="160dp"
            android:layout_height="90dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/chaminade_orange"
            android:text="@string/back_button"
            android:textSize="32sp"
            android:textColor="@color/cham_background_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="160dp"
            android:layout_height="90dp"
            android:backgroundTint="@color/chaminade_orange"
            android:text="@string/start_button"
            android:textSize="32sp"
            android:textColor="@color/cham_background_default"
            app:layout_constraintBottom_toBottomOf="@+id/backButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backButton"
            app:layout_constraintVertical_bias="0.65" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>